--- a/index.html
+++ b/index.html
@@ -52,8 +52,13 @@
 <p><a href="https://nips2017vigil.github.io/">Conference of Neural Information Processing Systems (NIPS 2017): Visually-Grounded Interaction and Language Workshop</a> : <a href="https://github.com/nips2017vigil/nips2017vigil.github.io/raw/master/papers/2017/video-semnet-memory.pdf">PDF</a></p>
 
 <h2 id="datasets">Datasets</h2>
+      <h4 id="movie-clip-dataset">Movie clip dataset</h4>
+    <ul>
+  <li><a href="https://s3.amazonaws.com/storytelling-data/movie_clips_full.csv">Full annotations (.csv)</a></li>
+  <li><a href="https://s3.amazonaws.com/storytelling-data/movie_clips_aggregated.csv">Aggregated annotations (.csv)</a></li>
+</ul>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/categories/github-pages-basics/">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+
 
 <h2 id="contact">Contact</h2>
 
