--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
       <h2 id="overview">Overview</h2>
 
 <p>Memory-Augmented Video Semantic Network for learning to:
-<ul><li>encode semantic descriptors of video into an embedding</li>
-  <li>predicting genres and IMDB ratings</li></ul></p>
+  <ul>
+    <li>Encode semantic descriptors of video into an embedding</li>
+    <li>Predict genres and IMDB ratings</li>
+  </ul>
+</p>
 
 <p><img src="https://github.com/pralav/video-semnet/raw/master/samsung.001.jpeg" alt="Image" /></p>
 
