--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
 <h2 id="datasets">Datasets</h2>
       <h4 id="movie-clip-dataset">Movie clip dataset</h4>
+The dataset attached here is a subset of samples that were used for training our model. We use several such video segments from the same movie to train our model.
     <ul>
   <li><a href="https://s3.amazonaws.com/storytelling-data/movie_clips_full.csv">Full annotations (.csv)</a></li>
   <li><a href="https://s3.amazonaws.com/storytelling-data/movie_clips_aggregated.csv">Aggregated annotations (.csv)</a></li>
